--- a/chirp/package.json
+++ b/chirp/package.json
@@ -1,5 +1,4 @@
 {
-
   "name": "chirp",
   "version": "0.0.0",
   "private": true,
@@ -19,6 +18,7 @@
     "express-session": "^1.12.0",
     "mongoose": "^4.2.3",
     "morgan": "~1.6.1",
+    "ng-resource": "^1.3.2",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
